salam i work on nav

--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
 		<div class="hRight">
 			<i class="fas fa-shopping-cart"></i>
 		</div>
-		<div class="hNav"></div>
+		<nav class="hNav">
+			<ul>
+				<li><a href="index.html" title=''>صفحه اصلی</a></li>
+				<li><a href="" title=''></a>ماهی آب شیرین</li>
+				<li><a href="" title=''></a>لوازم</li>
+				<li><a href="" title=''></a>اکواریوم و پایه</li>
+				<li><a href="" title=''></a>غذا و دارو</li>
+				<li><a href="" title=''></a>دکوراسیون</li>
+				<li><a href="" title=''></a>گیاه</li>
+				<li><a href="" title=''></a>پشتیبانی</li>
+			</ul>
+		</nav>
 	</header>
 	<section>
 		
