hi another update for nav

--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
 		<nav class="hNav">
 			<ul>
 				<li><a href="index.html" title=''>صفحه اصلی</a></li>
-				<li><a href="" title=''>ماهی آب شیرین</a>
-					<div class='subMenu'>
-						<a href="#" title=''>گوشتخوار</a>
-						<a href="#" title=''>گیاهخوار</a>
-					</div>
-				</li>
+				<li><a href="" title=''>ماهی آب شیرین</a></li>
+					<ul class='subMenu'>
+						<li><a href="#" title=''>گوشتخوار</a></li>
+						<li><a href="#" title=''>گیاهخوار</a></li>
+					</ul>
 				<li><a href="" title=''>لوازم</a></li>
+					<ul class='subMenu'>
+						<li><a href="#" title=''>هیتر</a></li>
+						<li><a href="#" title=''>پمپ هوا</a></li>
+					</ul>
 				<li><a href="" title=''>اکواریوم و پایه</a></li>
 				<li><a href="" title=''>غذا و دارو</a></li>
 				<li><a href="" title=''>دکوراسیون</a></li>
