--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 	</head>
 	<body>
 	<header>
-		<div class="hLeft"></div>
+		<div class="hLeft">
+			<img src="images/logo.jpg" width='auto' height='50px'>
+		</div>
 		<div class="hCenter"></div>
 		<div class="hRight">
 			<i class="fas fa-shopping-cart"></i>
+			<i class="fas fa-user"></i>
 		</div>
 		<nav class="hNav">
 			<ul>
