--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 		</div>
 		<nav class="hNav">
 			<ul>
-				<li><a href="index.html" title=''>صفحه اصلی</a></li>
-				<li><a href="" title=''>ماهی آب شیرین</a></li>
-					<ul class='subMenu'>
+				<li><a href="index.html" title='main page'>صفحه اصلی</a></li>
+				<li><a href="#fish" title=''>ماهی آب شیرین</a></li>
+					<ul class='subMenu buyFish'>
 						<li><a href="#" title=''>گوشتخوار</a></li>
 						<li><a href="#" title=''>گیاهخوار</a></li>
 					</ul>
 				<li><a href="" title=''>لوازم</a></li>
-					<ul class='subMenu'>
+					<ul class='subMenu accessories'>
 						<li><a href="#" title=''>هیتر</a></li>
 						<li><a href="#" title=''>پمپ هوا</a></li>
 					</ul>
