--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 		</nav>
 	</header>
 	<section>
-		
+		<div class='slideShow'>
+		<img src="images/slide1.jpg" width='100%' height='auto'>
+		</div>
 	</section>
 	<footer>
 		
