--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
 	<header>
 		<div class="hLeft"><p>MahiFam</p></div>
 		<div class="hCenter"><form action=""><input type="search" ><input type="submit" value="جستجو"></form></div>
-		<div class="hRight">
-			<i class="fas fa-shopping-cart"></i>
-			<i class="fas fa-user"></i>
+		<div id='hRight' class="hRight">
+			<a href='#shop' onClick='showCart();'><i id='shopIcon' class="fas fa-shopping-cart"></i></a>
+			<div id='shopBar' class='shopBar'>
+				<a id='closeCart' href="#close" onclick="closeCart();"><i class="fa fa-times" aria-hidden="true"></i></a>
+				<p>سبد خرید خالی می باشد</p>
+			</div>
+			<i id='userIcon' class="fas fa-user"></i>
+			<i id='searchIcon' class="fa fa-search" aria-hidden="true"></i>
 		</div>
 		<nav class="hNav">
 			<ul>
@@ -41,7 +46,7 @@
 				<li><a href="" title=''>پشتیبانی</a></li>
 			</ul>
 		</nav>
-	<div id='fixNav' class='textSlideShow'><p>MahiFam</p></div>
+	<div id='fixNav' class='textSlideShow'><p>MahiFam</p><div></div></div>
 	</header>
 	<section>
 		<div id='slide' class='slideShow'>
@@ -76,10 +81,20 @@ function myScroll() {
   if (document.body.scrollTop > 150 || document.documentElement.scrollTop > 150) {
     document.getElementById("slide").className = "slideShow slideBlur";
     document.getElementById("fixNav").className = "textSlideShow fixNav";
+    document.getElementById("hRight").className = "hRight fixhRight";
+    document.getElementById("searchIcon").style.display = "block";
   } else {
     document.getElementById("slide").className = "slideShow";
     document.getElementById("fixNav").className = "textSlideShow";
+    document.getElementById("hRight").className = "hRight";
+    document.getElementById("searchIcon").style.display = "none";
   }
+}
+function showCart(){
+	document.getElementById("shopBar").style.display='block';
+}
+function closeCart() {
+document.getElementById("shopBar").style.display='none';
 }
 </script>
 	</body>
