--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@ function myResize(){
 var width = document.body.clientWidth;
 	if(width<=800){
 		document.getElementById('searchIcon').style.display='block';
-		document.getElementById("hCenter").className = "hCenter fixhCenter";
+		//document.getElementById("hCenter").className = "hCenter fixhCenter";
 	}
 	else{
 		document.getElementById('searchIcon').style.display='none';
-		document.getElementById("hCenter").className = "hCenter";
+		//document.getElementById("hCenter").className = "hCenter";
 	}
 }
 
